--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -28,6 +28,7 @@ body {
     background-position: top;
 
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+
 }
 
 .logo-box {
@@ -45,6 +46,7 @@ body {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .heading-primary {
@@ -52,13 +54,15 @@ body {
     color: #fff;
 
     backface-visibility: hidden;
+    margin-bottom: 60px;
 }
 
 .heading-primary-main {
     display: block;
-    font-size: 60px;
+    font-size: 72px;
     font-weight: 400;
     letter-spacing: 35px;
+    padding: 20px;
 
     animation-name: moveInFromLeft;
     animation-duration: 1s;
@@ -66,7 +70,7 @@ body {
 
 .heading-primary-sub {
     display: block;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 400;
     letter-spacing: 17.4px;
 
@@ -104,4 +108,73 @@ body {
         opacity: 100%;
         transform: translateX(0);
     }
+}
+
+.btn:visited,
+.btn:link {
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 15px 40px;
+    font-size: 20px;
+    display: inline-block;
+    border-radius: 100px;
+
+    transition: all .2s;
+    position: relative;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0,.2);
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+}
+
+.btn::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    display: inline-block;
+    position: absolute;
+    border-radius: 100px;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+}
+
+.btn-discover {
+    font-size: 24px;
+    background-color: #fff;
+    color: #777;
+}
+
+.btn-discover::after {
+    background-color: #fff;
+}
+
+.btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
+
+@keyframes moveInFromBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    100% {
+        opacity: 100%;
+        transform: translateX(0);
+    }
+}
+
+.btn-animate {
+    animation: moveInFromBottom .4s ease-out .75s;
+    animation-fill-mode: backwards;
 }
