--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -6,182 +6,134 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
+@keyframes moveInFromLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  80% {
+    transform: translateX(1rem); }
+  100% {
+    opacity: 100%;
+    transform: translateX(0); } }
+
+@keyframes moveInFromRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem); }
+  80% {
+    transform: translateX(-1rem); }
+  100% {
+    opacity: 100%;
+    transform: translateX(0); } }
+
+@keyframes moveInFromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); }
+  100% {
+    opacity: 100%;
+    transform: translateX(0); } }
 
 *,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-}
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
 
 html {
-    font-size: 62.5%;
-}
+  font-size: 62.5%; }
 
 body {
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    /*font-size: 16px; */
-    padding: 3rem;
-    box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
-.header {
-    position: relative;
-    height: 95vh;
-    background-image: linear-gradient(to right bottom,rgba(126, 213, 111, 0.8),  rgba(40, 180, 133, 0.8)) ,url("../img/hero.jpg");
-    background-size: cover;
-    background-position: top;
-
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-
-}
-
-.logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
-}
-
-.logo {
-    height: 3.5rem;
-}
-
-.text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  /*font-size: 16px; */
+  padding: 3rem; }
 
 .heading-primary {
-    text-transform: uppercase;
-    color: #fff;
-
-    backface-visibility: hidden;
-    margin-bottom: 6rem;
-}
-
-.heading-primary-main {
+  text-transform: uppercase;
+  color: #fff;
+  backface-visibility: hidden;
+  margin-bottom: 6rem; }
+  .heading-primary--main {
     display: block;
     font-size: 7rem;
     font-weight: 400;
     letter-spacing: 3.5rem;
     padding: 2rem;
-
     animation-name: moveInFromLeft;
-    animation-duration: 1s;
-}
-
-.heading-primary-sub {
+    animation-duration: 1s; }
+  .heading-primary--sub {
     display: block;
     font-size: 2.5rem;
     font-weight: 400;
     letter-spacing: 1.75rem;
-
     animation-name: moveInFromRight;
-    animation-duration: 1s;
-}
+    animation-duration: 1s; }
 
-@keyframes moveInFromLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-10rem);
-    }
-
-    80% {
-        transform: translateX(1rem);
-    }
-
-    100% {
-        opacity: 100%;
-        transform: translateX(0);
-    }
-}
-
-@keyframes moveInFromRight {
-    0% {
-        opacity: 0;
-        transform: translateX(10rem);
-    }
-
-    80% {
-        transform: translateX(-1rem);
-    }
-
-    100% {
-        opacity: 100%;
-        transform: translateX(0);
-    }
-}
-
-.btn:visited,
-.btn:link {
-    text-decoration: none;
-    text-transform: uppercase;
-    padding: 2rem 4.5rem;
-    font-size: 2rem;
-    display: inline-block;
-    border-radius: 10rem;
-
-    transition: all .2s;
-    position: relative;
-}
+.btn:visited, .btn:link {
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 2rem 4.5rem;
+  font-size: 2rem;
+  display: inline-block;
+  border-radius: 10rem;
+  transition: all .2s;
+  position: relative; }
 
 .btn:hover {
-    transform: translateY(-.3rem);
-    box-shadow: 0 10px 20px rgba(0,0,0,.2);
-}
+  transform: translateY(-0.3rem);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); }
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0; }
 
 .btn:active {
-    transform: translateY(-.1rem);
-    box-shadow: 0 5px 10px rgba(0,0,0,.2);
-}
+  transform: translateY(-0.1rem);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); }
 
 .btn::after {
-    content: "";
-    height: 100%;
-    width: 100%;
-    display: inline-block;
+  content: "";
+  height: 100%;
+  width: 100%;
+  display: inline-block;
+  position: absolute;
+  border-radius: 10rem;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s; }
+
+.btn--discover {
+  font-size: 2.5rem;
+  background-color: #fff;
+  color: #777; }
+  .btn--discover::after {
+    background-color: #fff; }
+
+.btn--animate {
+  animation: moveInFromBottom .4s ease-out .75s;
+  animation-fill-mode: backwards; }
+
+.header {
+  position: relative;
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
+  .header__logo-box {
     position: absolute;
-    border-radius: 10rem;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all .4s;
-}
-
-.btn-discover {
-    font-size: 2.5rem;
-    background-color: #fff;
-    color: #777;
-}
-
-.btn-discover::after {
-    background-color: #fff;
-}
-
-.btn:hover::after {
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
-}
-
-
-@keyframes moveInFromBottom {
-    0% {
-        opacity: 0;
-        transform: translateY(3rem);
-    }
-
-    100% {
-        opacity: 100%;
-        transform: translateX(0);
-    }
-}
-
-.btn-animate {
-    animation: moveInFromBottom .4s ease-out .75s;
-    animation-fill-mode: backwards;
-}
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
